k8s/orders-fix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: retail-app
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      serviceAccountName: retail-store-orders
      containers:
        - name: orders
          image: public.ecr.aws/aws-containers/retail-store-sample-orders:1.0.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 64m
              memory: 256Mi
            limits:
              cpu: 512m
              memory: 768Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 10
